Fix z-index

--- a/src/sass/_map.scss
+++ b/src/sass/_map.scss
@@ -1,5 +1,9 @@
 #map {
   height: 100vh;
+
+  &.active {
+    z-index: 2;
+  }
 }
 
 .leaflet-control-roy {
